tests/positive/pr09_emitter_discriminant.safe
-- Test: pr09_emitter_discriminant
-- Description: Historical PR09a discriminant-surface regression fixture.
--   The path now lives under tests/positive so future fixture-metadata
--   tooling does not misclassify it as a rejecting negative case.
--   The current boolean-discriminant subset is emitted and compile-validated.
-- Expected: ACCEPT

package PR09_Emitter_Discriminant
   type Result (OK : Boolean = False) is record
      case OK
         when True
            Value : Integer;
         when False
            Error_Code : Integer;



