tests/negative/neg_pr09_emitter_discriminant.safe
-- Test: neg_pr09_emitter_discriminant
-- Description: Historical PR09a discriminant-surface regression fixture.
--   The path remains under tests/negative for continuity, but the current
--   boolean-discriminant subset is now emitted and compile-validated.
-- Expected: ACCEPT

package PR09_Emitter_Discriminant is

   type Result (OK : Boolean = False) is record
      case OK is
         when True  then Value : Integer;
         when False then Error : Integer;
      end case;
   end record;

end PR09_Emitter_Discriminant;
